just formatting instructions

--- a/runbooks/DevSecOps runbooks/1.2.AWS_SecretManager_GetSecret_Example.ipynb
+++ b/runbooks/DevSecOps runbooks/1.2.AWS_SecretManager_GetSecret_Example.ipynb
@@ -5,9 +5,7 @@
    "source": [
     "# AWS Secret Management\r\n",
     "\r\n",
-    "## DevOpsLab Example\r\n",
-    "\r\n",
-    "### Prerequisite tasks\r\n",
+    "## Prerequisite tasks\r\n",
     "\r\n",
     "To set up and run this example, you must first set up the following:\r\n",
     "\r\n",
