--- a/runbooks/DevSecOps runbooks/2.00.Hasicorp_Vault_CLI_Installation.ipynb
+++ b/runbooks/DevSecOps runbooks/2.00.Hasicorp_Vault_CLI_Installation.ipynb
@@ -2,8 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "changing-thought",
-   "metadata": {},
    "source": [
     "# Hasicorp Vault CLI Installation\n",
     "## DevOpsLab Example\n",
@@ -13,95 +11,89 @@
     "### Prerequisite tasks\n",
     "- Knowing admin user and password for the target hots (**NOT YET IN THIS NOTEBOOK VERSION**)\n",
     "- No other python dependencies are needed."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "id": "contained-blanket",
-   "metadata": {},
    "source": [
     "### Connect to target system (optional)"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "worth-aluminum",
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "import getpass\n",
-    "target_host=input (\"Which is the hostname of the target machine? \")\n",
-    "user=input (\"Which is your user to execute admin processes? \")\n",
-    "password = getpass.getpass(\"Which is the password to use? \")"
-   ]
+    "%run \"0.0. Connect to the target system.ipynb\""
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "id": "ordinary-costume",
-   "metadata": {},
    "source": [
     "### Install latest version of Hasicorp Vault"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "id": "efficient-remains",
-   "metadata": {},
    "source": [
     "Execute the following commands:\n",
     "\n",
     "- First, download and extract the hasicorp vault\n",
     "- Then, install it"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "strategic-essay",
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "%%bash\n",
-    "cd\n",
-    "if [ ! -f vault_1.6.3_linux_amd64.zip ];\n",
-    "  then \n",
-    "    curl \"https://releases.hashicorp.com/vault/1.6.3/vault_1.6.3_linux_amd64.zip\" -o \"vault_1.6.3_linux_amd64.zip\"\n",
-    "    echo \"file vault_1.6.3_linux_amd64.zip downloaded\"\n",
-    "  else\n",
-    "    echo \"File vault_1.6.3_linux_amd64.zip already downloaded.\"\n",
-    "fi\n",
-    "if [ ! -d ./vault ]\n",
-    "  then\n",
-    "    unzip vault_1.6.3_linux_amd64.zip\n",
-    "    echo \"Directory vault extracted\"\n",
-    "  else\n",
-    "    echo \"Directory vault already extracted.\"\n",
+    "%%bash\r\n",
+    "cd\r\n",
+    "if [ ! -f vault_1.6.3_linux_amd64.zip ];\r\n",
+    "  then \r\n",
+    "    curl \"https://releases.hashicorp.com/vault/1.6.3/vault_1.6.3_linux_amd64.zip\" -o \"vault_1.6.3_linux_amd64.zip\"\r\n",
+    "    echo \"file vault_1.6.3_linux_amd64.zip downloaded\"\r\n",
+    "  else\r\n",
+    "    echo \"File vault_1.6.3_linux_amd64.zip already downloaded.\"\r\n",
+    "fi\r\n",
+    "if [ ! -f ./vault ]\r\n",
+    "  then\r\n",
+    "    unzip vault_1.6.3_linux_amd64.zip\r\n",
+    "    echo \"Vault extracted\"\r\n",
+    "  else\r\n",
+    "    echo \"Vault already extracted.\"\r\n",
     "fi"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "informal-nigeria",
+   "source": [
+    "%%bash -s \"$target_host\" \"$user\" \"$password\"\r\n",
+    "if [ ! -f ~/vault ];\r\n",
+    "  then\r\n",
+    "    unzip vault_1.6.3_linux_amd64.zip\r\n",
+    "    #echo $3 | sudo -S ./vault/install\r\n",
+    "    if [ $? -eq 0 ];\r\n",
+    "      then \r\n",
+    "        echo \"VAULT CLI succesfully installed\"\r\n",
+    "    fi\r\n",
+    "  else\r\n",
+    "    echo \"VAULT ClI already installed\"\r\n",
+    "fi\r\n",
+    "#/usr/local/bin/vault --version\r\n",
+    "~/vault --version"
+   ],
+   "outputs": [],
    "metadata": {
     "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "%%bash -s \"$target_host\" \"$user\" \"$password\"\n",
-    "if [ ! -f /usr/local/bin/vault ];\n",
-    "  then\n",
-    "    echo $3 | sudo -S ./vault/install\n",
-    "    if [ $? -eq 0 ];\n",
-    "      then \n",
-    "        echo \"VAULT CLI succesfully installed\"\n",
-    "    fi\n",
-    "  else\n",
-    "    echo \"VAULT ClI already installed\"\n",
-    "fi\n",
-    "/usr/local/bin/vault --version"
-   ]
+   }
   }
  ],
  "metadata": {
