--- a/runbooks/DevSecOps runbooks/2.02.Hasicorp_Vault_Server_Put_Retrieve_Secrets.ipynb
+++ b/runbooks/DevSecOps runbooks/2.02.Hasicorp_Vault_Server_Put_Retrieve_Secrets.ipynb
@@ -2,107 +2,172 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "changing-thought",
-   "metadata": {},
    "source": [
     "# Hasicorp Vault Usage Examples\n",
     "## DevOpsLab Example\n",
     "\n",
     "### Prerequisite tasks\n",
     "To set up and run this example, you must first set up the Vault Server as described in the \"2.01.Hashicorp_Vault_Server_Installation\" and start the server"
-   ]
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "%env VAULT_ADDR=http://127.0.0.1:8200/"
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "id": "ordinary-costume",
-   "metadata": {},
    "source": [
     "### Write a secret to the vault"
-   ]
+   ],
+   "metadata": {}
   },
   {
-   "cell_type": "raw",
-   "id": "collected-intensity",
-   "metadata": {},
+   "cell_type": "markdown",
    "source": [
-    "Create a simple secret"
-   ]
+    "- Create a simple secret named \"hello\" with a value \"world\""
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "threatened-aircraft",
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "%%bash\n",
-    "# Write a first secret\n",
-    "vault kv put secret/hello foo=world\n",
-    "# Write a second different secret\n",
-    "vault kv put secret/test1 api_key=my_api_key_value\n",
-    "# Write a second version of the first secret (version will be \"2\")\n",
-    "vault kv put secret/hello foo=world\n",
-    "# Write two secrets in one sentences\n",
-    "vaulk kv put secret/test1 api_key=my_api_key_value other_key=another_key_value\n"
-   ]
+    "!vault kv put secret/hello foo=world\r\n"
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "id": "elder-hungarian",
-   "metadata": {},
+   "source": [
+    "- Write a second different secret \"api_key\" with a value \"my_api_key_value\""
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "!vault kv put secret/test1 api_key=my_api_key_value"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "- Write a second version of the first secret (version will be \"2\")"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "!vault kv put secret/hello foo=world2\r\n"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Write two secrets in one sentences"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "!vault kv put secret/test1 api_key=my_api_key_value other_key=another_key_value\r\n"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
    "source": [
     "### Read a secret from the vault"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "id": "surrounded-fitness",
-   "metadata": {},
    "source": [
-    "Read some secret examples"
-   ]
+    "- Read all pairs key-value of the secret \"hello\"\r\n"
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "native-cleaning",
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "%%bash\n",
-    "# Read all pairs key-value of the secret\n",
-    "vault kv get secret/hello\n",
-    "vault kv get secret/test1\n",
-    "# Read just one of the pairs identified by field name\n",
-    "vault kv get -field=other_key secret/test1"
-   ]
+    "!vault kv get secret/hello"
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "id": "comparative-microphone",
-   "metadata": {},
+   "source": [
+    "- Read all pairs key-value of the secret \"test1\""
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "!vault kv get secret/test1"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "- Read from the secret \"test1\" just one of the pairs identified by the field name \"other_key\"\r\n"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "!vault kv get -field=other_key secret/test1"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
    "source": [
     "### Delete a secret from the vault"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "id": "biological-soundtrack",
-   "metadata": {},
    "source": [
-    "Delete some secret examples"
-   ]
+    "- Delete one of the secrets that has been created earlier\r\n"
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "binding-carrier",
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "%%bash\n",
-    "vault kv delete secret/hello"
-   ]
+    "!vault kv delete secret/hello"
+   ],
+   "outputs": [],
+   "metadata": {}
   }
  ],
  "metadata": {
