--- a/runbooks/DevSecOps runbooks/2.08.Hasicorp_Vault_Hvac_Library_Installation.ipynb
+++ b/runbooks/DevSecOps runbooks/2.08.Hasicorp_Vault_Hvac_Library_Installation.ipynb
@@ -2,8 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "changing-thought",
-   "metadata": {},
    "source": [
     "# Hasicorp Vault Library Installation\n",
     "## DevOpsLab Example\n",
@@ -11,62 +9,59 @@
     "### Prerequisite tasks\n",
     "To set up and run this example, you must first set up the following:\n",
     "- Install python and pip"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "id": "residential-stations",
-   "metadata": {},
    "source": [
     "### Connect to target system"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "comparable-inquiry",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "%run \"0.0. Connect to the target system.ipynb\""
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "id": "ordinary-costume",
-   "metadata": {},
    "source": [
     "### Install the *hvac* library (Hasicorp Vault Library)"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "id": "efficient-remains",
-   "metadata": {},
    "source": [
-    "Install the hvac library using the *pip install boto3*. This installation allow the use of a Vault Dev Server.\n",
-    "THIS IS NOT FOR PRODUCTION ENVIRONMENT\n",
-    "\n",
+    "Install the hvac library using the *pip install hvac*. This installation allow the use of a Vault Dev Server.\r\n",
+    "THIS IS NOT FOR PRODUCTION ENVIRONMENT\r\n",
+    "\r\n",
     "Consider to install in the protected virtual env, if any"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "threatened-aircraft",
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "%%bash -s \"$target_host\" \"$user\" \"$password\"\n",
-    "pip3 show hvac\n",
-    "if [ $? -eq 0 ]; then\n",
-    "  echo \"hvac library already installed\"\n",
-    "else\n",
-    "  echo \"Starting installation of hvac library\"\n",
-    "  echo $3 | sudo -S -H pip3 install hvac\n",
-    "  pip3 show hvac\n",
+    "%%bash -s \"$target_host\" \"$user\" \"$password\"\r\n",
+    "pip3 show hvac 2>null\r\n",
+    "if [ $? -eq 0 ]; then\r\n",
+    "  echo \"hvac library already installed\"\r\n",
+    "else\r\n",
+    "  echo \"Starting installation of hvac library\"\r\n",
+    "  # echo $3 | sudo -S -H pip3 install hvac\r\n",
+    "  pip3 install hvac\r\n",
+    "  pip3 show hvac\r\n",
     "fi"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   }
  ],
  "metadata": {
