Fixing example issues

--- a/runbooks/DevSecOps runbooks/2.09.Hasicorp_Vault_GetClientConnection.ipynb
+++ b/runbooks/DevSecOps runbooks/2.09.Hasicorp_Vault_GetClientConnection.ipynb
@@ -2,63 +2,110 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "changing-thought",
-   "metadata": {},
    "source": [
-    "# WORK IN PROGRESS\n",
-    "# Hasicorp Vault Library Installation\n",
-    "## DevOpsLab Example\n",
-    "\n",
-    "### Prerequisite tasks\n",
-    "To set up and run this example, you must first set up the following:\n",
+    "# Hasicorp Vault Library Usage\r\n",
+    "## DevOpsLab Example\r\n",
+    "\r\n",
+    "### Prerequisite tasks\r\n",
+    "To set up and run this example, you must first set up the following:\r\n",
     "- Install hvac library and Server Vault running"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "id": "residential-stations",
-   "metadata": {},
    "source": [
     "### Connect to target system (optional)"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "comparable-inquiry",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "%run \"0.0. Connect to the target system.ipynb\""
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "%env VAULT_ADDR=http://127.0.0.1:8200 (please, substitute with your appropiate value)\r\n",
+    "%env VAULT_TOKEN=x.ddasd23802342242 (please, substitute with your appropiate value)"
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "id": "cardiovascular-release",
-   "metadata": {},
    "source": [
-    "### NOT COMPLETED - Test a connection to server with the hvac library in a local server"
-   ]
+    "### Test a connection to server with the hvac library in a local server and verify it"
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "adverse-pressing",
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "import hvac\n",
-    "client = hvac.Client(url='https://localhost:8200')\n",
+    "Make a connection to the Hvac server with the environment variables (VAULT_ADDR and VAULT_TOKEN).\r\n",
+    "Expected result: A succesful connection and therefore a valid Hvac client.\r\n"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "import os\r\n",
+    "import hvac\r\n",
+    "\r\n",
+    "def connect():\r\n",
+    "    '''\r\n",
+    "    Connect to the vault server and return the connected vault client instance.\r\n",
+    "    '''\r\n",
+    "    url = os.environ.get('VAULT_ADDR')\r\n",
+    "    token = os.environ.get('VAULT_TOKEN')\r\n",
+    "\r\n",
+    "    if not url or not token:\r\n",
+    "        print(\r\n",
+    "            'Failed connecting to vault. ' +\r\n",
+    "            '`VAULT_ADDR` and `VAULT_TOKEN` must be set in your environment.'\r\n",
+    "        )\r\n",
+    "    else :\r\n",
+    "        print('Connection established OK. Returning a valid client object')\r\n",
+    "        return hvac.Client(url=url, token=token) "
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "If the cell is returning a valid connection, we will test the authentication.\r\n",
+    "Expected result: Client is authenticated.\r\n"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "import hvac\r\n",
+    "client = connect()\r\n",
     "client.is_authenticated()"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "above-thomas",
-   "metadata": {},
+   "source": [],
    "outputs": [],
-   "source": []
+   "metadata": {}
   }
  ],
  "metadata": {
