Set instructions to use the hvac library

--- a/runbooks/DevSecOps runbooks/2.09.Hasicorp_Vault_GetClientConnection.ipynb
+++ b/runbooks/DevSecOps runbooks/2.09.Hasicorp_Vault_GetClientConnection.ipynb
@@ -29,6 +29,15 @@
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## Test a connection to server with the hvac library in a local server\r\n",
+    "\r\n",
+    "### First, define some environment variables related to our own Vault Server"
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "source": [
@@ -46,13 +55,12 @@
    "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "source": [
     "Make a connection to the Hvac server with the environment variables (VAULT_ADDR and VAULT_TOKEN).\r\n",
-    "Expected result: A succesful connection and therefore a valid Hvac client.\r\n"
+    "\r\n",
+    "**Expected result**: A succesful connection and therefore a valid Hvac client.\r\n"
    ],
-   "outputs": [],
    "metadata": {}
   },
   {
@@ -84,8 +92,9 @@
   {
    "cell_type": "markdown",
    "source": [
-    "If the cell is returning a valid connection, we will test the authentication.\r\n",
-    "Expected result: Client is authenticated.\r\n"
+    "Invoking this little function, we could obtain a valid connection to be used later in the examples.\r\n",
+    "\r\n",
+    "**Expected result**: a Client Hvac object definition with version 1 or 2 like \"<hvac.v1.Client at 0x7eff48129908>\"\r\n"
    ],
    "metadata": {}
   },
@@ -94,7 +103,27 @@
    "execution_count": null,
    "source": [
     "import hvac\r\n",
-    "client = connect()\r\n",
+    "client = connect()"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Test if the client has been properly authenticated in the defined vault server\r\n",
+    "\r\n",
+    "By invoking this function we could verify if the authentication has been properly done.\r\n",
+    "\r\n",
+    "**Expected result**: True (if authenticated)"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "import hvac\r\n",
     "client.is_authenticated()"
    ],
    "outputs": [],
