--- a/runbooks/DevSecOps runbooks/2.10.Hasicorp_Vault_GetSecret_Example.ipynb
+++ b/runbooks/DevSecOps runbooks/2.10.Hasicorp_Vault_GetSecret_Example.ipynb
@@ -2,74 +2,112 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "changing-thought",
-   "metadata": {},
    "source": [
-    "# Hasicorp Vault Management\n",
-    "## DevOpsLab Example\n",
+    "# Hasicorp Vault Management\r\n",
+    "## DevOpsLab Example\r\n",
+    "\r\n",
+    "Some examples to use programatically a Hasicorp Vault server for basic operations\r\n",
+    "\r\n",
+    "### Prerequisite tasks\r\n",
+    "To set up and run this example, you must first set up the following:\r\n",
+    "\r\n",
+    "- Configure your Hasicorp Vault server \r\n",
+    "- Install the hvac library in your environment using *pip install hvac*\r\n",
+    "- Execute previously the runbook \"2.09.Hasicorp_Vault_GetClientConnection\"\r\n"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "import hvac\r\n",
+    "client = connect()"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### List the available secret in one path\n"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "list_response=client.secrets.kv.list_secrets(path='secret')\r\n",
+    "print('The secret path list under \"secret\" prefix are : {secretos}'\r\n",
+    "      .format(secretos=','.join(list_response['data']['keys'])))"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Create a secret\n",
     "\n",
-    "### Prerequisite tasks\n",
-    "To set up and run this example, you must first set up the following:\n",
-    "- Configure your Hasicorp Vault server \n",
-    "- Install the hvac library in your environment using *pip install hvac*"
-   ]
+    "We are going to create a simple secret \"test3\" containing a key \"my_other_secret\" which will have the value of \"mi_otro_secreto\"\n"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "my_secret = { 'my_other_secret': 'mi_otro_secreto'}\r\n",
+    "#client.secrets.kv.v2.create_or_update_secret(path='secret/test3',secret=my_secret)\r\n",
+    "client.secrets.kv.create_or_update_secret(path='secret/test3', secret=dict(my_other_secret='mi_otro_secreto'))"
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "id": "ordinary-costume",
-   "metadata": {},
    "source": [
-    "### Retrieve the secret value"
-   ]
+    "### Read a secret"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "result=client.secrets.kv.v2.read_secret(path=\"secret/test3\")\r\n",
+    "print(result)\r\n",
+    "print()\r\n",
+    "print('The value of the secret \"my_other_secret\" is {result_value}'.format(result_value=result['data']['data']))"
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "id": "efficient-remains",
-   "metadata": {},
    "source": [
-    "The following example shows how to:\n",
-    "- Retrieve a secret value using the \"get_secret_value\" hvac funtion (or equivalent)"
-   ]
+    "### Delete secrets"
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "strategic-essay",
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "import hvac"
-   ]
+    "client.secrets.kv.delete_secret_versions(path=\"secret/test3\",versions=[1,2,3])"
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "engaging-table",
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "def get_secret():\n",
-    "    \n",
-    "        # Your code goes here."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "short-agency",
-   "metadata": {},
+    "client.secrets.kv.delete_secret_versions(path=\"secret/test3\",versions=[8])"
+   ],
    "outputs": [],
-   "source": [
-    "get_secret()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "scenic-spanking",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "metadata": {}
   }
  ],
  "metadata": {
