--- a/runbooks/DevSecOps runbooks/1.2.AWS_SecretManager_GetSecret_Example.ipynb
+++ b/runbooks/DevSecOps runbooks/1.2.AWS_SecretManager_GetSecret_Example.ipynb
@@ -96,7 +96,7 @@
     "            \r\n",
     "    # Your code goes here. \r\n",
     "\r\n",
-    "        print (\"The Secret that has been retrieved and can be used is: \", text_secret_data)"
+    "        print (\"The Secret that has been retrieved and can be used is: \", secret)"
    ],
    "outputs": [],
    "metadata": {}
