changing confuse message of connection

--- a/runbooks/DevSecOps runbooks/2.09.Hasicorp_Vault_GetClientConnection.ipynb
+++ b/runbooks/DevSecOps runbooks/2.09.Hasicorp_Vault_GetClientConnection.ipynb
@@ -83,7 +83,7 @@
     "            '`VAULT_ADDR` and `VAULT_TOKEN` must be set in your environment.'\r\n",
     "        )\r\n",
     "    else :\r\n",
-    "        print('Connection established OK. Returning a valid client object')\r\n",
+    "        print('Connecting to vault server and trying to return a valid client object')\r\n",
     "        return hvac.Client(url=url, token=token) "
    ],
    "outputs": [],
