need function definition

--- a/runbooks/DevSecOps runbooks/2.10.Hasicorp_Vault_GetSecret_Example.ipynb
+++ b/runbooks/DevSecOps runbooks/2.10.Hasicorp_Vault_GetSecret_Example.ipynb
@@ -13,7 +13,7 @@
     "\r\n",
     "- Configure your Hasicorp Vault server \r\n",
     "- Install the hvac library in your environment using *pip install hvac*\r\n",
-    "- Execute previously the runbook \"2.09.Hasicorp_Vault_GetClientConnection\"\r\n"
+    "- Execute previously the runbook \"2.09.Hasicorp_Vault_GetClientConnection\" to define environment variables\r\n"
    ],
    "metadata": {}
   },
@@ -21,7 +21,32 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
+    "import os\r\n",
     "import hvac\r\n",
+    "\r\n",
+    "def connect():\r\n",
+    "    '''\r\n",
+    "    Connect to the vault server and return the connected vault client instance.\r\n",
+    "    '''\r\n",
+    "    url = os.environ.get('VAULT_ADDR')\r\n",
+    "    token = os.environ.get('VAULT_TOKEN')\r\n",
+    "\r\n",
+    "    if not url or not token:\r\n",
+    "        print(\r\n",
+    "            'Failed connecting to vault. ' +\r\n",
+    "            '`VAULT_ADDR` and `VAULT_TOKEN` must be set in your environment.'\r\n",
+    "        )\r\n",
+    "    else :\r\n",
+    "        print('Connecting to vault server and trying to return a valid client object')\r\n",
+    "        return hvac.Client(url=url, token=token) "
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
     "client = connect()"
    ],
    "outputs": [],
