setting the required env variables

--- a/runbooks/DevSecOps runbooks/2.10.Hasicorp_Vault_GetSecret_Example.ipynb
+++ b/runbooks/DevSecOps runbooks/2.10.Hasicorp_Vault_GetSecret_Example.ipynb
@@ -12,9 +12,20 @@
     "To set up and run this example, you must first set up the following:\r\n",
     "\r\n",
     "- Configure your Hasicorp Vault server \r\n",
-    "- Install the hvac library in your environment using *pip install hvac*\r\n",
-    "- Execute previously the runbook \"2.09.Hasicorp_Vault_GetClientConnection\" to define environment variables\r\n"
+    "- Install the hvac library in your environment using *pip install hvac*\r\n"
    ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "# (please, substitute with your appropiate value)\r\n",
+    "%env VAULT_ADDR=http://127.0.0.1:8200\r\n",
+    "# (please, substitute with your appropiate value)\r\n",
+    "%env VAULT_TOKEN=x.ddasd23802342242"
+   ],
+   "outputs": [],
    "metadata": {}
   },
   {
